# wayland-nv12-client

./: .clang-format  meson.build
src/: main.c
